# beemuu

./: .gitignore  AGENT_SPEC.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMUNITY_FRAMEWORK.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOY.md  IDEA.md  LAUNCH_POST.md  LICENSE  README.md  README_INTRO.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  ROADMAP.md  SECURITY.md  TECH_SPECS.md  UNIQUE_FEATURES.md  beeemuu_log_n54_demo.csv  main.py  package-lock.json  package.json  requirements.txt
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
backend/: admin_api.py  app.py  audit.py  auth.py  bootstrap.py  bootstrap_dtc.py  cross_links.py  db.py  dtc_api.py  schematics.py  seed.py  seed_bmw.py  seed_bmw_dim01.py  seed_cross_links.py  seed_dtcs.py  seed_schematics.py
bmw_diag/: __init__.py
community/: README.md  dtc_texts.toml  freeze_schemas.toml  profiles.toml
docs/: AGENTS_SETUP.md  DECODE_FUNCTIONS.md  FORUM_PLAN.md  PR_BODY_forum_scaffolding.md  PR_BODY_v0.3.0_decode.md  ROADMAP_ISSUES.md  deploy-schematics.md  feature-hosted-dashboard-panel.md  forum_post.md  open_source_maintenance_guide.md  ops-backup.md  sharing-profiles.md  testplans.md  v0.11.0_plan.md  v0.12.0_plan.md  v0.13.0_plan.md  v0.14.0_plan.md  v0.4.0_first_pr.md  v0.5.0_first_pr.md  v0.5.0_plan.md  v0.6.0_plan.md  v0.7.0_plan.md  v0.8.0_plan.md  v0.9.0_plan.md
frontend/: app.css  app.js  index.html  schematics.css  schematics.html  schematics.js
ops/: backup-beemuu-db.sh  beemuu-api.service  beemuu.com.conf  beemuu.montanablotter.com.conf  bootstrap.sh
research/: bmw_diag_cross_verification.md  bmw_diag_dim01_dtcs.md  bmw_diag_dim04_uds_dids.md  bmw_diag_dim07_local_ids.md  bmw_diag_dim09_freeze_academic.md  bmw_diag_dimensions.md  bmw_diag_file_analysis.md  bmw_diag_insight.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analysis.rs  anonymize.rs  backend_dashboard.rs  commands.rs  community.rs  hosted.rs  hunt.rs  keepalive.rs  lib.rs  main.rs  opinions.rs  oracle.rs  schematics.rs  server.rs  story.rs  testplans.rs
src-tauri/src/data/: dtc.rs  ecus.rs  freeze.rs  live.rs  mod.rs  service_functions.rs  vin.rs
src-tauri/src/protocol/: mod.rs  security.rs
src-tauri/src/transport/: enet.rs  isotp.rs  kdcan.rs  mod.rs  record.rs  sim.rs
src-tauri/tests/: async_commands.rs
(+152 files in other folders)
