[package]
name = "beeemuu"
version = "0.2.0"
description = "Independent OBD2 diagnostic dashboard for BMW vehicles"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ohgeeceee/beemuu"

[lib]
name = "beeemuu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
toml = "0.8"
