[package]
name = "beeemuu"
version = "0.4.0"
description = "Independent OBD2 diagnostic dashboard for BMW vehicles"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ohgeeceee/beemuu"

[lib]
name = "beeemuu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
toml = "0.8.23"
# Used by `hosted::fetch` to pull build health from the VPS over HTTPS.
# rustls-tls avoids the OpenSSL native dep; json enables direct deserialization.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
